deploy/agic/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pr-agent-app-route
  namespace: default
spec:
  parentRefs:
    - name: pr-agent-gateway
      namespace: default
  rules:
    # Rule for GET requests to /
    - matches:
        - path:
            type: PathPrefix
            value: /
          method: GET
      backendRefs:
        - name: pr-agent-service
          port: 80

    # Rule for POST requests to /api/v1/github_webhooks
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/github_webhooks
          method: POST
      backendRefs:
        - name: pr-agent-service
          port: 80


# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: pr-agent-app-route
#   namespace: default
# spec:
#   parentRefs:
#     - name: pr-agent-gateway
#       namespace: default
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: nginx-test-service
#           port: 80
